Setup and Configure Angular Router, Create a Router Configuration File named app.routing.ts, Define HomeComponent Route inside app.routing.ts, Define ContactComponent Route inside app.routing.ts, Export ConfiguredRouterModule from app.routing.ts, Import ConfiguredRouterModule into app.module.ts, Add ConfiguredRouterModule to "imports" array inside app.module.ts, Replace <home> directive and <contact> directive inside AppComponent HTML Template with <router-outlet> directive, Replace "href" html attribute with "routerLink" directive for each menu item link inside NavbarComponent HTML Template, Set "Projects" menu item link "routerLink" directive to route value "/", Set "Contact" menu item link "routerLink" directive to route value "/contact"

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       <ul class="navbar-nav ml-auto">
         <!-- projects link -->
         <li class="nav-item">
-          <a class="nav-link" href="/">Projects</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Projects</a>
         </li>
         <!-- github link -->
         <li class="nav-item">
@@ -30,7 +30,7 @@
         </li>
         <!-- contact link -->
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
         </li>
       </ul>
     </div><!-- /.collapse navbar-collapse -->
