--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <p>This is the HomeComponent!</p>
+  <angular-router-project></angular-router-project>
 </div><!-- /.container -->
