--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="container">
   <angular-router-project></angular-router-project>
+  <angular-template-driven-forms-project></angular-template-driven-forms-project>
 </div><!-- /.container -->
