Create GithubProjectComponent, Register GithubProjectComponent with AppModule, Import GithubProjectComponent into AppModule, Add GithubProjectComponent to @NgModule Decorator "declarations" property array, Define GithubProjectComponent TypeScript, Define GithubProjectComponent HTML Template, Add <github-project> directive inside HomeComponent HTML Template

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <angular-router-project></angular-router-project>
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
+  <github-project></github-project>
 </div><!-- /.container -->
