Create QuestionsProjectComponent, Register QuestionsProjectComponent with AppModule, Import QuestionsProjectComponent into AppModule, Add QuestionsProjectComponent to @NgModule Decorator "declarations" property array, Define QuestionsProjectComponent TypeScript, Define QuestionsProjectComponent HTML Template, Add <questions-project> directive inside HomeComponent HTML Template

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
+  <github-project></github-project>
+  <questions-project></questions-project>
   <angular-router-project></angular-router-project>
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
-  <github-project></github-project>
 </div><!-- /.container -->
