Create FirebaseNosqlDatabaseProjectComponent, Register FirebaseNosqlDatabaseProjectComponent with AppModule, Import FirebaseNosqlDatabaseProjectComponent into AppModule, Add FirebaseNosqlDatabaseProjectComponent to @NgModule Decorator "declarations" property array, Define FirebaseNosqlDatabaseProjectComponent TypeScript, Define FirebaseNosqlDatabaseProjectComponent HTML Template, Add <firebase-nosql-database-project> directive inside HomeComponent HTML Template

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,4 +3,5 @@
   <questions-project></questions-project>
   <angular-router-project></angular-router-project>
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
+  <firebase-nosql-database-project></firebase-nosql-database-project>
 </div><!-- /.container -->
