--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,4 +4,5 @@
   <angular-router-project></angular-router-project>
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
   <firebase-nosql-database-project></firebase-nosql-database-project>
+  <firebase-authentication-project></firebase-authentication-project>
 </div><!-- /.container -->
