Create SignInLandingPageProjectComponent, Register SignInLandingPageProjectComponent with AppModule, Import SignInLandingPageProjectComponent into AppModule, Add SignInLandingPageProjectComponent to @NgModule Decorator "declarations" property array, Define SignInLandingPageProjectComponent TypeScript, Define SignInLandingPageProjectComponent HTML Template, Add <sign-in-landing-page-project> directive inside HomeComponent HTML Template

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,4 +5,5 @@
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
   <firebase-nosql-database-project></firebase-nosql-database-project>
   <firebase-authentication-project></firebase-authentication-project>
+  <sign-in-landing-page-project></sign-in-landing-page-project>
 </div><!-- /.container -->
