--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,5 +5,6 @@
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
   <firebase-nosql-database-project></firebase-nosql-database-project>
   <firebase-authentication-project></firebase-authentication-project>
+  <actors-project></actors-project>
   <sign-in-landing-page-project></sign-in-landing-page-project>
 </div><!-- /.container -->
