Remove GithubProjectComponent Create ApmProjectComponent

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <github-project></github-project>
+  <apm-project></apm-project>
   <questions-project></questions-project>
   <angular-router-project></angular-router-project>
   <angular-template-driven-forms-project></angular-template-driven-forms-project>
