Change project name from Github Profile Search to Product Management Project

--- a/src/app/components/apm-project/apm-project.component.html
+++ b/src/app/components/apm-project/apm-project.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-header">
           <h3 class="card-title">
-            <a href="projects/apm/index.html">Github Web API Project</a>
+            <a href="projects/apm/index.html">Product Management Project</a>
           </h3><!-- /.card-title -->
 
           <div class="card-text project-summary">
