Update project summary of APM Project Update project technology of APM Project

--- a/src/app/components/apm-project/apm-project.component.html
+++ b/src/app/components/apm-project/apm-project.component.html
@@ -8,14 +8,14 @@
           </h3><!-- /.card-title -->
 
           <div class="card-text project-summary">
-            Angular Single Page App that allows a user to enter a product name and filter a product list.  Allows a user to navigate between views. Behind the scenes the Angular App uses multiple Angular Modules, multiple Angular Components, Angular Service, RxJS, and Observables to communicate with a JSON file that contains a list of products. Multiple routes are defined. The ProductDetailComponent route has a route guard that prevents a user from navigating from the ProductListComponent to the ProductDetailComponent if the product that is defined as a route parameter is not greater than zero or is not a number.
+            Angular Single Page App that allows a user to view a list of products, filter a product list, and view a selected product's details. Behind the scenes the Angular App uses multiple Angular Feature Modules, one Shared Module, multiple Angular Components, an Angular Service, RxJS, and Observables to communicate with a JSON file that contains a list of products. A user can navigate between multiple component views. The Angular Router is configured to use multiple routes and one route guard. The ProductDetailComponent route has a route guard that prevents a user from navigating from the ProductListComponent to the ProductDetailComponent if the product that is defined as a route parameter is not greater than zero or is not a number.
           </div><!-- /.card-text project-summary -->
         </div><!-- /.card-header -->
 
         <div class="card-body">
           <ul class="list-group list-group-flush project-technology">
             <li class="list-group-item">
-              Angular, Angular Components, Angular Services, Angular Router, RxJS, Observables, JSON, Angular 2-Way Data Binding, Angular CLI, TypeScript, Interfaces, node.js, npm, Bootstrap 4, Font-Awesome, SCSS
+              Angular 10, Bootstrap 4, Font-Awesome, Angular Components, Angular Services, Angular Router, RxJS, Observables, JSON, 2-Way Data Binding, Property Binding, Event Binding, TypeScript, Interfaces, Angular CLI, node.js, npm
             </li>
           </ul>
         </div><!-- /.card-body -->
